# P1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  query.cpp
sample/A Midsummer Night's Dream/: Act 1, Scene 1_Athens. The palace of THESEUS  Act 1, Scene 2_Athens. QUINCE'S house  Act 2, Scene 1_A wood near Athens  Act 2, Scene 2_Another part of the wood  Act 3, Scene 1_The wood. TITANIA lying asleep  Act 3, Scene 2_Another part of the wood  Act 4, Scene 1_The same. LYSANDER, DEMETRIUS, HELENA, and HERMIA  Act 4, Scene 2_Athens. QUINCE'S house  Act 5, Scene 1_Athens. The palace of THESEUS
sample/Antony and Cleopatra/: Act 1, Scene 1_Alexandria. A room in CLEOPATRA's palace  Act 1, Scene 2_The same. Another room  Act 1, Scene 3_The same. Another room  Act 1, Scene 4_Rome. OCTAVIUS CAESAR's house  Act 1, Scene 5_Alexandria. CLEOPATRA's palace  Act 2, Scene 1_Messina. POMPEY's house  Act 2, Scene 2_Rome. The house of LEPIDUS  Act 2, Scene 3_The same. OCTAVIUS CAESAR's house  Act 2, Scene 4_The same. A street  Act 2, Scene 5_Alexandria. CLEOPATRA's palace  Act 2, Scene 6_Near Misenum  Act 2, Scene 7_On board POMPEY's galley, off Misenum  Act 3, Scene 10_Another part of the plain  Act 3, Scene 11_Alexandria. CLEOPATRA's palace  Act 3, Scene 12_Egypt. OCTAVIUS CAESAR's camp  Act 3, Scene 13_Alexandria. CLEOPATRA's palace  Act 3, Scene 1_A plain in Syria  Act 3, Scene 2_Rome. An ante-chamber in OCTAVIUS CAESAR's house  Act 3, Scene 3_Alexandria. CLEOPATRA's palace  Act 3, Scene 4_Athens. A room in MARK ANTONY's house  Act 3, Scene 5_The same. Another room  (+21 more)
(+624 files in other folders)
